core/infrastructure/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: core-deno
  annotations:
    cloud.google.com/backend-config: '{"default":"core-backend-config"}'
spec:
  type: NodePort
  selector:
    app: core-deno
  sessionAffinity: ClientIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
